feat: Update swagger
